--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,25 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "grid = {\n",
     "    'kernel_sizes': [\n",
-    "        [4], [6], \n",
-    "        [4, 4], [6, 6],\n",
-    "        [4, 4, 4], [6, 6, 6],\n",
+    "        [3], \n",
+    "        [3, 3],\n",
+    "        [3, 3, 3],\n",
     "        ],\n",
-    "    'num_filters': [8, 16],\n",
-    "    'num_fc_layers': [1, 2, 3],\n",
+    "    'num_filters': [32],\n",
+    "    'num_fc_layers': [2, 3],\n",
     "    'fc_size': [8, 16],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,25 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of combinations to train and test: 72\n"
+      "Number of combinations to train and test: 12\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e87d5d430d864393bfc9d5a15eeb1013",
+       "model_id": "1a9e408d6e8645dd8e587fc2f3785675",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Combinations:   0%|          | 0/72 [00:00<?, ?it/s]"
+       "Combinations:   0%|          | 0/12 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -149,13 +149,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combination: {'kernel_sizes': [6, 6, 6], 'num_filters': 16, 'num_fc_layers': 3, 'fc_size': 16}\n"
+      "Combination: {'kernel_sizes': [3, 3, 3], 'num_filters': 32, 'num_fc_layers': 3, 'fc_size': 16}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9b4cae9d3f64fae80e125911f2425e2",
+       "model_id": "7ceb0738c09b44778b6340c4c3f2bf55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,18 +165,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1,   140] loss: 2.144\n",
-      "[1,   280] loss: 1.958\n",
-      "[1,   420] loss: 1.915\n",
-      "[1,   560] loss: 1.855\n",
-      "[1,   700] loss: 1.751\n",
-      "[1,   840] loss: 1.748\n"
-     ]
     }
    ],
    "source": [
@@ -186,7 +174,7 @@
     "val_dataset = ImageFolder(root=val_path, transform=transform)\n",
     "\n",
     "# Define dataloaders\n",
-    "batch_size = 64\n",
+    "batch_size = 64*4\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
@@ -201,7 +189,7 @@
     "                                'class9_accuracy', ])\n",
     "    results.to_csv('results.csv', index=False)\n",
     "\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 20\n",
     "iterations = 5\n",
     "\n",
     "# get already tested combinations\n",
@@ -224,19 +212,21 @@
     "        net = net.to(device)\n",
     "\n",
     "        criterion = nn.CrossEntropyLoss()\n",
-    "        optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "        optimizer = optim.Adam(net.parameters(), lr=0.001, )\n",
     "\n",
     "        # Train the network\n",
     "        # losses = []\n",
-    "        for epoch in range(10):  # loop over the dataset multiple times\n",
+    "        for epoch in range(EPOCHS):  # loop over the dataset multiple times\n",
     "            running_loss = 0.0\n",
     "            for i, data in enumerate(train_loader, 0):\n",
     "                inputs, labels = data[0].to(device), data[1].to(device)\n",
     "                optimizer.zero_grad()\n",
     "\n",
     "                outputs = net(inputs)\n",
-    "                # print(outputs)\n",
+    "                # print(outputs.shape)\n",
     "                # print(labels)\n",
+    "                # break\n",
+    "\n",
     "                loss = criterion(outputs, labels)\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
@@ -245,7 +235,7 @@
     "                if i % ten_percent == ten_percent - 1:  \n",
     "                    print('[%d, %5d] loss: %.3f' %\n",
     "                        (epoch + 1, i + 1, running_loss / ten_percent))\n",
-    "                    losses.append(running_loss / ten_percent)\n",
+    "                    # losses.append(running_loss / ten_percent)\n",
     "                    running_loss = 0.0\n",
     "                \n",
     "                    # # if 3 previous losses are not an improvement, break\n",
