--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,16 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torchvision\n",
-    "import torchvision.transforms as transforms"
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "import numpy as np\n",
+    "np.random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +103,13 @@
     "        ],\n",
     "    'num_filters': [32],\n",
     "    'num_fc_layers': [2, 3],\n",
-    "    'fc_size': [8, 16],\n",
+    "    'fc_size': [64, 128],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a9e408d6e8645dd8e587fc2f3785675",
+       "model_id": "1846b74edb6d4dd88c5ac1234fb19bb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,13 +153,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combination: {'kernel_sizes': [3, 3, 3], 'num_filters': 32, 'num_fc_layers': 3, 'fc_size': 16}\n"
+      "Combination: {'kernel_sizes': [3, 3, 3], 'num_filters': 32, 'num_fc_layers': 3, 'fc_size': 128}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ceb0738c09b44778b6340c4c3f2bf55",
+       "model_id": "2ce628291dab4768aa6e76935d280df5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,15 +173,20 @@
    ],
    "source": [
     "from tqdm.notebook import tqdm\n",
+    "# set torch seed\n",
     "train_dataset = ImageFolder(root=train_path, transform=transform)\n",
     "test_dataset = ImageFolder(root=test_path, transform=transform)\n",
     "val_dataset = ImageFolder(root=val_path, transform=transform)\n",
     "\n",
+    "#small validation set (900)\n",
+    "small_val_dataset = torch.utils.data.Subset(val_dataset, list(range(900)))\n",
+    "\n",
     "# Define dataloaders\n",
-    "batch_size = 64*4\n",
+    "batch_size = 64\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "small_val_loader = DataLoader(small_val_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "import pandas as pd\n",
     "try:\n",
@@ -189,7 +198,7 @@
     "                                'class9_accuracy', ])\n",
     "    results.to_csv('results.csv', index=False)\n",
     "\n",
-    "EPOCHS = 20\n",
+    "EPOCHS = 25\n",
     "iterations = 5\n",
     "\n",
     "# get already tested combinations\n",
@@ -234,9 +243,25 @@
     "                running_loss += loss.item()\n",
     "                if i % ten_percent == ten_percent - 1:  \n",
     "                    print('[%d, %5d] loss: %.3f' %\n",
-    "                        (epoch + 1, i + 1, running_loss / ten_percent))\n",
+    "                        (epoch + 1, i + 1, running_loss / ten_percent), end=' ')\n",
     "                    # losses.append(running_loss / ten_percent)\n",
     "                    running_loss = 0.0\n",
+    "\n",
+    "                    # calculate the accuracy on the validation set\n",
+    "                    correct = 0\n",
+    "                    total = 0\n",
+    "\n",
+    "                    with torch.no_grad():\n",
+    "                        for data in small_val_loader:\n",
+    "                            images, labels = data[0].to(device), data[1].to(device)\n",
+    "                            outputs = net(images)\n",
+    "                            _, predicted = torch.max(outputs.data, 1)\n",
+    "                            total += labels.size(0)\n",
+    "                            correct += (predicted == labels).sum().item()\n",
+    "                        \n",
+    "                    print('small_val acc: %d %%' % (\n",
+    "                        100 * correct / total))\n",
+    "                    \n",
     "                \n",
     "                    # # if 3 previous losses are not an improvement, break\n",
     "                    # if len(losses) > 3 and losses[-1] > losses[-2] > losses[-3]:\n",
@@ -252,6 +277,7 @@
     "        total = 0\n",
     "        class_correct = list(0. for i in range(10))\n",
     "        class_total = list(0. for i in range(10))\n",
+    "\n",
     "        with torch.no_grad():\n",
     "            for data in test_loader:\n",
     "                images, labels = data[0].to(device), data[1].to(device)\n",
@@ -264,6 +290,7 @@
     "                    label = labels[i]\n",
     "                    class_correct[label] += (predicted[i] == label).item()\n",
     "                    class_total[label] += 1\n",
+    "               \n",
     "            \n",
     "        results = pd.concat([results, pd.DataFrame([{\n",
     "            'kernel_sizes': combination['kernel_sizes'], \n",
