--- a/efficientLarge_keras_no_aug.ipynb
+++ b/efficientLarge_keras_no_aug.ipynb
@@ -304,19 +304,19 @@
     "# save histories\n",
     "import pickle\n",
     "\n",
-    "with open(\"../results/HISTORY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
+    "with open(\"results/HISTORY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(histories, f)\n",
     "\n",
     "# save accuracies\n",
-    "with open(\"../results/ACCURACY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
+    "with open(\"results/ACCURACY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(accuracies, f)\n",
     "\n",
     "# save class accuracies\n",
-    "with open(\"../results/CLASS_ACCURACY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
+    "with open(\"results/CLASS_ACCURACY_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(class_accuracies, f)\n",
     "\n",
     "# save confusion matrices\n",
-    "with open(\"../results/CONF_MAT_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
+    "with open(\"results/CONF_MAT_EfficientNetV2L_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(conf_mats, f)"
    ]
   }
