add conf message

--- a/ClassicCNN_keras_no_aug.ipynb
+++ b/ClassicCNN_keras_no_aug.ipynb
@@ -116,7 +116,7 @@
       "Epoch 4/40\n",
       "1336/1336 [==============================] - 16s 12ms/step - loss: 1.1524 - accuracy: 0.5807 - val_loss: 1.4928 - val_accuracy: 0.4791\n",
       "Epoch 5/40\n",
-      " 125/1336 [=>............................] - ETA: 14s - loss: 1.1128 - accuracy: 0.5960"
+      " 536/1336 [===========>..................] - ETA: 9s - loss: 1.0729 - accuracy: 0.6106"
      ]
     }
    ],
