--- a/ClassicCNN_keras_no_aug.ipynb
+++ b/ClassicCNN_keras_no_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,13 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7923b0b5d644ae891694a5b59457294",
+       "model_id": "171ff1970df74384b87078590ea380eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Configurations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running config kernel_sizes_[3]_num_filters_[32]_fc_sizes_[128]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4d977d5ea4f48f9ac9ad2769443d33d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,21 +129,96 @@
       "Found 90000 files belonging to 10 classes.\n",
       "Fitting model 0\n",
       "Epoch 1/40\n",
-      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.6215 - accuracy: 0.4107 - val_loss: 1.4910 - val_accuracy: 0.4518\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.6303 - accuracy: 0.4094 - val_loss: 1.5757 - val_accuracy: 0.4142\n",
       "Epoch 2/40\n",
-      "1336/1336 [==============================] - 15s 11ms/step - loss: 1.3646 - accuracy: 0.5015 - val_loss: 1.4516 - val_accuracy: 0.4853\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.3638 - accuracy: 0.5056 - val_loss: 1.4489 - val_accuracy: 0.4758\n",
       "Epoch 3/40\n",
-      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.2478 - accuracy: 0.5469 - val_loss: 1.5168 - val_accuracy: 0.4642\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.2363 - accuracy: 0.5496 - val_loss: 1.5036 - val_accuracy: 0.4656\n",
       "Epoch 4/40\n",
-      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.1524 - accuracy: 0.5807 - val_loss: 1.4928 - val_accuracy: 0.4791\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 1.1337 - accuracy: 0.5875 - val_loss: 1.5461 - val_accuracy: 0.4820\n",
       "Epoch 5/40\n",
-      " 536/1336 [===========>..................] - ETA: 9s - loss: 1.0729 - accuracy: 0.6106"
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 1.0253 - accuracy: 0.6291 - val_loss: 1.5335 - val_accuracy: 0.4847\n",
+      "Epoch 6/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.9358 - accuracy: 0.6607 - val_loss: 1.7460 - val_accuracy: 0.4513\n",
+      "Epoch 7/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.8529 - accuracy: 0.6916 - val_loss: 1.8594 - val_accuracy: 0.4811\n",
+      "Epoch 8/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.7770 - accuracy: 0.7190 - val_loss: 1.8529 - val_accuracy: 0.4620\n",
+      "Epoch 9/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.7163 - accuracy: 0.7415 - val_loss: 2.1605 - val_accuracy: 0.4680\n",
+      "Epoch 10/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.6568 - accuracy: 0.7643 - val_loss: 1.9396 - val_accuracy: 0.4860\n",
+      "Epoch 11/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.6146 - accuracy: 0.7791 - val_loss: 2.0209 - val_accuracy: 0.4840\n",
+      "Epoch 12/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.5692 - accuracy: 0.7952 - val_loss: 2.4081 - val_accuracy: 0.4727\n",
+      "Epoch 13/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.5333 - accuracy: 0.8091 - val_loss: 2.1500 - val_accuracy: 0.4751\n",
+      "Epoch 14/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.5006 - accuracy: 0.8206 - val_loss: 2.4052 - val_accuracy: 0.4658\n",
+      "Epoch 15/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.4817 - accuracy: 0.8278 - val_loss: 2.5892 - val_accuracy: 0.4749\n",
+      "Epoch 16/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.4555 - accuracy: 0.8383 - val_loss: 2.5793 - val_accuracy: 0.4836\n",
+      "Epoch 17/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.4299 - accuracy: 0.8479 - val_loss: 2.7050 - val_accuracy: 0.4798\n",
+      "Epoch 18/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.4236 - accuracy: 0.8518 - val_loss: 2.8165 - val_accuracy: 0.4856\n",
+      "Epoch 19/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.4019 - accuracy: 0.8576 - val_loss: 2.7428 - val_accuracy: 0.4780\n",
+      "Epoch 20/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.3882 - accuracy: 0.8632 - val_loss: 2.8333 - val_accuracy: 0.4882\n",
+      "Epoch 21/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.3707 - accuracy: 0.8709 - val_loss: 2.7459 - val_accuracy: 0.4753\n",
+      "Epoch 22/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.3617 - accuracy: 0.8741 - val_loss: 2.9315 - val_accuracy: 0.4851\n",
+      "Epoch 23/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.3474 - accuracy: 0.8796 - val_loss: 3.0763 - val_accuracy: 0.4640\n",
+      "Epoch 24/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.3421 - accuracy: 0.8811 - val_loss: 2.9955 - val_accuracy: 0.4778\n",
+      "Epoch 25/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.3306 - accuracy: 0.8876 - val_loss: 3.2635 - val_accuracy: 0.4642\n",
+      "Epoch 26/40\n",
+      "1336/1336 [==============================] - 15s 12ms/step - loss: 0.3199 - accuracy: 0.8896 - val_loss: 3.1115 - val_accuracy: 0.4816\n",
+      "Epoch 27/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.3109 - accuracy: 0.8933 - val_loss: 3.2628 - val_accuracy: 0.4711\n",
+      "Epoch 28/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.3015 - accuracy: 0.8965 - val_loss: 3.2012 - val_accuracy: 0.4662\n",
+      "Epoch 29/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2987 - accuracy: 0.8990 - val_loss: 3.1546 - val_accuracy: 0.4780\n",
+      "Epoch 30/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2883 - accuracy: 0.9013 - val_loss: 3.3684 - val_accuracy: 0.4818\n",
+      "Epoch 31/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2811 - accuracy: 0.9037 - val_loss: 3.5768 - val_accuracy: 0.4682\n",
+      "Epoch 32/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2793 - accuracy: 0.9050 - val_loss: 3.2654 - val_accuracy: 0.4553\n",
+      "Epoch 33/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2700 - accuracy: 0.9090 - val_loss: 3.4765 - val_accuracy: 0.4516\n",
+      "Epoch 34/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2643 - accuracy: 0.9115 - val_loss: 3.3163 - val_accuracy: 0.4807\n",
+      "Epoch 35/40\n",
+      "1336/1336 [==============================] - 15s 12ms/step - loss: 0.2596 - accuracy: 0.9123 - val_loss: 3.4536 - val_accuracy: 0.4800\n",
+      "Epoch 36/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2511 - accuracy: 0.9162 - val_loss: 3.4755 - val_accuracy: 0.4756\n",
+      "Epoch 37/40\n",
+      "1336/1336 [==============================] - 16s 12ms/step - loss: 0.2500 - accuracy: 0.9152 - val_loss: 3.6317 - val_accuracy: 0.4840\n",
+      "Epoch 38/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2477 - accuracy: 0.9169 - val_loss: 3.8371 - val_accuracy: 0.4704\n",
+      "Epoch 39/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2390 - accuracy: 0.9206 - val_loss: 3.7317 - val_accuracy: 0.4771\n",
+      "Epoch 40/40\n",
+      "1336/1336 [==============================] - 15s 11ms/step - loss: 0.2373 - accuracy: 0.9208 - val_loss: 3.6716 - val_accuracy: 0.4760\n",
+      "Predicting model 0\n",
+      "1407/1407 - 15s - 15s/epoch - 10ms/step\n"
      ]
     }
    ],
    "source": [
-    "for config in net_configs:\n",
+    "for config in tqdm(net_configs, desc='Configurations'):\n",
     "    config_str = '_'.join([f'{k}_{v}' for k,v in config.items()])\n",
+    "\n",
+    "    print(f'Running config {config_str}')\n",
+    "    \n",
     "    histories = list()\n",
     "    accuracies = list()\n",
     "    class_accuracies = list()\n",
@@ -185,6 +281,7 @@
     "\n",
     "        conf_mat = confusion_matrix(test_labels, preds)\n",
     "        accuracy = accuracy_score(test_labels, preds)\n",
+    "        print(f'Accuracy: {accuracy}')\n",
     "        class_accuracy = conf_mat.diagonal()/conf_mat.sum(axis=1)\n",
     "\n",
     "        print(f'Saving model {i}')\n",
